fix error text on mobile

--- a/frontend/sass/commento.scss
+++ b/frontend/sass/commento.scss
@@ -42,7 +42,8 @@
   .commento-error-box {
     width: 100%;
     border-radius: 4px;
-    height: 32px;
+    min-height: 32px;
+    margin-bottom: 10px;
     text-align: center;
     color: $red-7;
     font-weight: 700;
